@@ -1513,7 +1513,17 @@
 		-- Show coordinates (must be after remove map border)
 		----------------------------------------------------------------------
 
-		do
+		if LeaMapsLC["ShowCoords"] == "On" then
+
+			-- Modify Track Quest and Quest Objectives checkboxes to make room for coordinates
+			if LeaMapsLC.NewPatch then
+				WorldMapTrackQuestText:SetText("")
+				WorldMapTrackQuest:SetHitRectInsets(0, 0, 0, 0)
+				WorldMapQuestShowObjectivesText:SetText("")
+				WorldMapQuestShowObjectives:SetHitRectInsets(0, 0, 0, 0)
+				WorldMapQuestShowObjectives:ClearAllPoints()
+				WorldMapQuestShowObjectives:SetPoint("BOTTOMRIGHT", WorldMapFrame, "BOTTOMRIGHT", -10, 4)
+			end
 
 			-- Create cursor coordinates frame
 			local cCursor = CreateFrame("Frame", nil, WorldMapFrame)
@@ -1566,20 +1576,6 @@
 				end
 				cPlayerTime = cPlayerTime + elapsed
 			end)
-
-			-- Function to show or hide coordinates
-			local function SetupCoords()
-				if LeaMapsLC["ShowCoords"] == "On" then
-					-- Show coordinaes
-					cCursor:Show(); cPlayer:Show()
-				else
-					cCursor:Hide(); cPlayer:Hide()
-				end
-			end
-
-			-- Set coordinates when option is clicked and on startp
-			LeaMapsCB["ShowCoords"]:HookScript("OnClick", SetupCoords)
-			SetupCoords()
 
 			-- If remove map border is enabled, create background frame and move coordinates into it
 			if LeaMapsLC["NoMapBorder"] == "On" and LeaMapsLC["UseDefaultMap"] == "Off" then
@@ -3117,6 +3113,7 @@
 		or	(LeaMapsLC["AutoChangeZones"] ~= LeaMapsDB["AutoChangeZones"])		-- Auto change zones
 		or	(LeaMapsLC["UseDefaultMap"] ~= LeaMapsDB["UseDefaultMap"])			-- Use default map
 		or	(LeaMapsLC["RevealMap"] ~= LeaMapsDB["RevealMap"])					-- Show unexplored areas
+		or	(LeaMapsLC["ShowCoords"] ~= LeaMapsDB["ShowCoords"])				-- Show coordinates
 		or	(LeaMapsLC["HideTownCityIcons"] ~= LeaMapsDB["HideTownCityIcons"])	-- Hide town and city icons
 		or	(LeaMapsLC["EnhanceBattleMap"] ~= LeaMapsDB["EnhanceBattleMap"])	-- Enhance battlefield map
 		then
@@ -3823,7 +3820,7 @@
 	LeaMapsLC:MakeCB(PageF, "RevealMap", "Show unexplored areas", 225, -212, true, "If checked, unexplored areas of the map will be shown on the world map and the battlefield map.")
 	LeaMapsLC:MakeCB(PageF, "ShowPointsOfInterest", "Show points of interest", 225, -232, false, "If checked, points of interest will be shown.")
 	LeaMapsLC:MakeCB(PageF, "ShowZoneLevels", "Show zone levels", 225, -252, false, "If checked, zone, dungeon and fishing skill levels will be shown.")
-	LeaMapsLC:MakeCB(PageF, "ShowCoords", "Show coordinates", 225, -272, false, "If checked, coordinates will be shown.")
+	LeaMapsLC:MakeCB(PageF, "ShowCoords", "Show coordinates", 225, -272, true, "If checked, coordinates will be shown.")
 	LeaMapsLC:MakeCB(PageF, "HideTownCityIcons", "Hide town and city icons", 225, -292, true, "If checked, town and city icons will not be shown on the continent maps.")
 
 	LeaMapsLC:MakeTx(PageF, "More", 225, -332)
